WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275222
AX: Elements with display: contents and content in a shadowroot do not have their content read when referenced by aria-labelledby
https://bugs.webkit.org/show_bug.cgi?id=275222
Summary
AX: Elements with display: contents and content in a shadowroot do not have t...
Konnor Rogers
Reported
2024-06-06 13:51:02 PDT
When an element with `display: contents;` has content in it's shadow root and is referenced by an `aria-labelledby` on another element, its content will not get read when using VoiceOver + Safari. The contents will get read when using VoiceOver + Firefox / Chrome Browsers tested: Firefox: 126.0.1 Chrome: 125.0.6 Safari: 17.5 MacOS Version: Sonoma 14.5 Codepen Reproduction:
https://codepen.io/paramagicdev/pen/xxNrQXp
Video of VoiceOver across browsers:
https://cdn.masto.host/rubysocial/media_attachments/files/112/571/647/196/358/910/original/695d0d065393ce7f.mp4
Additional notes: I do believe in my testing `aria-describedby` also suffered the same issue.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-06 13:51:12 PDT
<
rdar://problem/129361833
>
Karl Dubost
Comment 2
2024-06-06 22:03:07 PDT
There is a number of similar bug
https://bugs.webkit.org/buglist.cgi?quicksearch=aria-describedby
Konnor Rogers
Comment 3
2024-06-06 22:18:55 PDT
(In reply to Karl Dubost from
comment #2
)
> There is a number of similar bug >
https://bugs.webkit.org/buglist.cgi?quicksearch=aria-describedby
None of the bugs there have anything to do with using aria-describedby with display: contents on the host of a shadow root.
Konnor Rogers
Comment 4
2024-06-06 22:20:18 PDT
At least not from my browsing...maybe I missed it?
Tyler Wilcock
Comment 5
2026-01-19 08:50:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56837
EWS
Comment 6
2026-01-20 19:07:12 PST
Committed
305918@main
(2b263331d69a): <
https://commits.webkit.org/305918@main
> Reviewed commits have been landed. Closing PR #56837 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug